# inputctl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: windows-sendinput-smoke.ps1
src/inputctl/: __init__.py  __main__.py  cli.py  keyboard.py  keymap.py  win32_sendinput.py
tests/: test_cli.py  test_keyboard.py  test_keymap.py  test_win32_sendinput.py
