[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "inputctl"
version = "0.1.0"
description = "Windows-first CLI for synthetic keyboard input."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
inputctl = "inputctl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/inputctl"]

